--- a/todo/templates/todo/detail.html
+++ b/todo/templates/todo/detail.html
@@ -6,7 +6,7 @@
     <title>To Do Application</title>
     <meta charset="UTF-8">
     <meta name="author" content="INIAD">
-    <link rel="stylesheet" type="text/css" href="css/base.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'todo/css/base.css' %}">
   </head>
 
   <body>
